/*
 * $Id: ChangeLog,v 1.1874 2003/12/14 06:42:10 andijahja Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-12-14 12:27 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/contrib/libct/Makefile
    - removed C_USR=... - it disabled user C switches

2003-12-14 13:42 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/compiler/genc.c
    * allow xHarbour to produce C file for inline C routines contained in a PRG
      file eventhough the PRG file does not contain a single PRG routine.

2003-12-13 17:57 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/hblog.prg
    % Optimized to use FOR EACH/
    * Minor formating.

2003-12-13 21:07 UTC+0100 Francesco Saverio Giudice <info@fsgiudice.com>
  * hrbdll.bc
    + source/rtl/readline.c

2003-12-14 02:40 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/vm/macro.c
    * add #include "hbfast.h" to please MSVC
  * source/rtl/readline.c
    * some type casts for MSVC

2003-12-13 11:26 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/hash.c
    + Added Owners Management support.
    * Minor optimizations and formating.

  * tests/hash.prg
    * Minor formating

2003-12-13 19:10 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/tests/rddspeed.prg
    * close and then reopen database after index creation to workaround
      Clipper bug. After index creation Clipper lose index locking
      and works like in exclusive mode when in fact it's shared mode.

2003-12-13 18:52 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
    * typo in comment fixed

  * xharbour/Makefile
  * xharbour/bin/hb-func.sh
  * xharbour/config/dir.cf
  * xharbour/config/install.cf
  * xharbour/config/dos/install.cf
  * xharbour/config/linux/install.cf
  * xharbour/config/w32/install.cf