@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.1874 2003/12/14 06:42:10 andijahja Exp $
+ * $Id: ChangeLog,v 1.1875 2003/12/14 11:28:15 druzus Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+2003-12-15 04:20 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
+  * source/compiler/genc.c
+    * fix bug I introduced in recent changes so that multi inline C
+      (more than one loop in pragma's) were not processed properly.
 
 2003-12-14 12:27 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
   * xharbour/contrib/libct/Makefile
